# sphinx-tippy

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.md
docs/folder/: other.md
src/: sphinx_tippy.py
tests/: test_basic.py
tests/test_basic/: test_basic.yml
